updated lesson_44